crates/math-core/tests/snapshots/conversion_test__simple_binomial_coefficient.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\binom12"
---
<math>
    <mrow>
        <mo>(</mo>
        <mfrac linethickness="0">
            <mn>1</mn>
            <mn>2</mn>
        </mfrac>
        <mo>)</mo>
    </mrow>
</math>
