crates/math-core/tests/snapshots/conversion_test__simple_forward_ref.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\begin{align}\\eqref{a}\\\\x\\label{a}\\end{align}"
---
<math>
    <mtable displaystyle="true" scriptlevel="0" style="width: 100%">
        <mtr>
            <mtd style="width: 50%"></mtd>
            <mtd style="text-align: right;justify-items: end;padding-right: 0;">
                <mtext><a href="#a">(2)</a></mtext>
            </mtd>
            <mtd style="width: 50%;text-align: right;justify-items: end;">
                <mtext>(1)</mtext>
            </mtd>
        </mtr>
        <mtr>
            <mtd style="width: 50%"></mtd>
            <mtd style="text-align: right;justify-items: end;padding-right: 0;">
                <mi>x</mi>
            </mtd>
            <mtd style="width: 50%;text-align: right;justify-items: end;" id="a">
                <mtext>(2)</mtext>
            </mtd>
        </mtr>
    </mtable>
</math>
