crates/math-core/tests/snapshots/conversion_test__simple_integral.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\int dx"
---
<math>
    <mo lspace="0">∫</mo>
    <mi>d</mi>
    <mi>x</mi>
</math>
