crates/math-core/tests/snapshots/conversion_test__sin_plus_cos.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\sin + \\cos"
---
<math>
    <mrow><mspace/><mi>sin</mi></mrow>
    <mspace width="0.1667em"/>
    <mo lspace="0" rspace="0">+</mo>
    <mspace width="0.1667em"/>
    <mrow><mspace/><mi>cos</mi></mrow>
</math>
