crates/math-core/tests/snapshots/conversion_test__sine_after_color.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x\\color{red}\\sin y"
---
<math>
    <mi>x</mi>
    <mrow style="color:#FF0000;">
        <mspace width="0.1667em"/>
        <mrow>
            <mrow><mspace/><mi>sin</mi></mrow>
            <mo lspace="0.1667em">&ApplyFunction;</mo>
            <mi>y</mi>
        </mrow>
    </mrow>
</math>
